css/style.css
body {
  padding: 0px;
  margin: 0px;
  height: 1000px;
  font-family: "Lato", sans-serif;
  color: aliceblue;
}

.main-container {
  background: url("/img/lawyer-back.jpg");
  background-size: cover;
}

.content-first {
  display: flex;
  margin: 0px auto;
  width: 95%;
  color: aliceblue;
}

.box {
  margin: 30px;
  margin-top: 120px;
}
.left-content {
  margin: 20px;
}

.headline {
  margin: 20px;
}
.box h1 {
  margin: 0px;
  font-size: 70px;
  font-family: "Bricolage Grotesque", sans-serif;
  color: rgb(255, 255, 240);
}

.button {
  margin: 20px;
}
.btn {
  display: inline-block;
  margin: 5px;
  margin-left: 0px;
  border: 2px solid orange;
  padding: 10px;
  width: 15%;
  text-align: center;
  cursor: pointer;
}

#btn1 {
  background-color: orange;
  color: rgb(2, 0, 39);
  transition: 250ms;
}

#btn2 {
  color: orange;
}
#btn1:hover {
  background: none;
  color: orange;
}

.social {
  padding: 25px;
  margin-top: 170px;
  margin-left: 345px;
}

li {
  margin: 12px;
  color: rgb(162, 162, 162);
  list-style: none;
  cursor: pointer;
}

.content-second {
  display: flex;
  width: 87%;
  margin: 0px auto;
  margin-top: 50px;
}

.firstcon {
  display: flex;
  position: relative;
}

.conicon {
  color: orange;
  font-size: 25px;
  margin: 20px;
  margin-left: 0px;
  text-align: left;
}

.contact-us {
  line-height: 10px;
}

.secondcon {
  display: flex;
}
h3 {
  color: rgb(162, 162, 162);
}

.services {
  display: flex;
  margin-left: 300px;
  height: 130px;
  width: 60%;
  cursor: pointer;
}

.service-box {
  color: #343434;
  border: 0.25px solid #efefef;
  background: white;
  text-align: center;
  padding: 40px;
  width: 15%;
  line-height: 10px;
  transition: 500ms;
}

.service-icon {
  font-size: 30px;
}

#box-4 {
  border: none;
  background: orange;
  color: aliceblue;
}

.service-box:hover {
  opacity: 80%;
}

.NY {
  font-size: 50px;
  font-family: "Courier New", Courier, monospace;
  color: black;
}

.support {
  position: relative;
  margin: 100px auto;
  width: 90%;
  height: 25%;
  background: rgb(48, 54, 73);
}

.support-content {
  display: flex;
  padding: 80px;
  padding-top: 100px;
}

.sendmsg {
  display: inline;
  font-size: 30px;
  margin-right: 90px;
}

.msgdes {
  display: inline-block;
  text-align: center;
  line-height: 30px;
  margin-right: 90px;
  color: rgb(162, 162, 162);
}

.support-btn {
  display: inline-block;
  padding: 15px;
  height: 22px;
  width: 125px;
  text-align: center;
  color: white;
  background: orange;
  border: 2px solid orange;
  transition: 250ms;
}

.support-btn:hover {
  border: 2px solid orange;
  background: none;
  color: rgb(209, 115, 0);
}

span {
  text-decoration: underline orange;
  text-underline-offset: 15px;
}

.featured-law-service {
  position: inherit;
  margin-top: -220px;
  background-color: rgb(97%, 97%, 97%);
  text-align: center;
}

.featuredlawservice {
  padding-top: 200px;
  margin: 15px;
  font-size: 50px;
  font-family: "Bricolage Grotesque", sans-serif;
  color: rgba(2, 1, 25, 0.725);
}

.featured-law-service article {
  font-size: 20px;
  line-height: 20px;
  color: rgb(68, 68, 68);
  font-stretch: narrower;
}

.all-services {
  display: flex;
  margin: 50px auto;
  padding-bottom: 150px;
  width: 88%;
  justify-content: space-between;
}

.service {
  height: 376px;
  width: 31%;
}

.service img {
  position: relative;
  width: 100%;
}

.lawyer-box {
  position: relative;
  margin: -175px auto;
  width: 90%;
  height: 60%;
  background: white;
  border-top: 5px solid orange;
  color: black;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.layer-services {
  margin: 40px;
}

.layer-services h1 {
  font-size: 20px;
}

.descr {
  color: rgb(121, 121, 121);
}

.view-more {
  margin: 20px;
}
a {
  text-decoration: none;

  color: black;
  transition: 250ms;
}

.view-more a:hover {
  color: orange;
}

.our-features {
  display: flex;
  margin: 0px auto;
  width: 90%;
  margin-top: 100px;
}

.ourfeatures {
  font-size: 30px;
  color: rgb(2, 1, 25, 0.725);
  font-weight: bold;
  font-family: "Bricolage Grotesque", sans-serif;
}

span {
  text-decoration: underline orange;
  text-underline-offset: 15px;
}

.section1 {
  color: black;
  width: 80%;
}

.section1 article {
  margin-top: 25px;
  color: rgb(63, 63, 63);
  padding: 12px;
  padding-left: 0px;
  font-size: 18px;
  line-height: 25px;
}

#learn-more {
  margin-top: 10px;
  background: rgb(22%, 24%, 31%);
  border: 1px solid rgb(22%, 24%, 31%);
}

#learn-more:hover {
  background: none;
  border: 1px solid orange;
  color: orange;
}
.section2 {
  display: flex;
  flex-wrap: wrap;
  color: black;
}

.subsec {
  display: flex;
  margin: 0px auto;
  width: 45%;
  margin: 15px;
  margin-top: 0px;
}

.icon {
  font-size: 40px;
  color: orange;
  padding-right: 15px;
}

.details {
  margin-top: -15px;
  color: rgb(2, 1, 25, 0.725);
}

.details h2 {
  font-size: 20px;
  margin-bottom: 10px;
  font-family: "Bricolage Grotesque", sans-serif;
}
.details article {
  color: rgb(107, 107, 107);
  line-height: 25px;
}

.contact-info {
  position: relative;
  margin: 130px;
  margin-bottom: -415px;
  width: 30%;
  height: 50%;
  padding: 15px;
  background: rgb(92%, 59%, 0%);
}

.contact-form {
  position: unset;
  margin: 0px auto;
  width: 89%;
  height: 50%;
  margin-top: -90px;
  background: rgb(48, 54, 73);
}

.contact-mediums {
  margin: 40px;
  color: white;
}
.con-icon {
  display: inline;
  font-size: 25px;
}

.con-detail {
  margin-top: -32px;
  margin-left: 40px;
}

.con-detail h2 {
  margin-top: 0px;
}

.inputs {
  padding: 50px;
  margin-left: 500px;
}

.inputs h1 {
  margin: 10px;
  font-family: "Bricolage Grotesque", sans-serif;
}

input {
  width: 40%;
  padding: 15px;
  background: none;
  border: 1px solid rgb(92, 92, 92);
  margin: 10px;
  color: #efefef;
}
#massege {
  width: 69%;
}

.message-btn {
  background: orange;
  color: white;
  border: 2px solid orange;
  transition: 250ms;
}
.message-btn:hover {
  background: none;
  color: orange;
}

textarea {
  margin: 10px;
  background: transparent;
  width: 94%;
  border: 1px solid rgb(92, 92, 92);
  font-family: "Lato", sans-serif;
}

